# do-it-yourself-bar

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  README.md
examples/: interactive-quick-actions.sh  net-vol-batt.sh  network-volume-battery.sh  quick-actions.sh  simple-clock.sh  trivial-app-launcher.sh
examples/contrib/: get-fritz-wan-stats.py  github-notifications.sh  kde-connect-battery.sh  kde.diybar.amdgpu.sh  network.sh  playerctl.sh  simple-clock-2.sh  todo-txt.sh  updates-apt.sh  weather-wttr.in.sh
examples/featured/: interactive-quick-actions.sh  simple-clock.sh
package/: metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/ui/applet/: Applet.qml  BlockButton.qml  BlockButtonTooltip.qml  Container.qml
package/contents/ui/common/: Utils.js
package/contents/ui/config/: AppearanceTab.qml  BehaviorTab.qml
plugin/: BlockInfo.cpp  BlockInfo.hpp  DBusService.cpp  DBusService.hpp  DoItYourselfBar.cpp  DoItYourselfBar.hpp  DoItYourselfBarPlugin.cpp  DoItYourselfBarPlugin.hpp  qmldir
scripts/: install-dependencies-fedora.sh  install-dependencies-opensuse.sh  install-dependencies-ubuntu.sh
